# kimm_franka_gui

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
config/: franka_rviz.rviz  gui.perspective  gui_rviz.perspective
include/kimm_franka_gui/: kimm_franka_gui.h
launch/: gui.launch  gui_rviz.launch
scripts/: kimm_franka_gui
src/: kimm_franka_gui.cpp  kimm_franka_gui.ui
